Don't try to reach out to direct conda path in windows.